[package]
name = "weather_fetcher"
version = "0.1.0"
authors = ["Botond Erdos <erdosboti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "1.0.3"
colored = "2"
ureq = "2.0.2"
regex = "1.4.3"
base64 = "0.13.0"
rusqlite = { version = "0.25.3", features = ["chrono"] }
chrono = "0.4"
